feat: add discussion's comments
